@@ -1,5 +1,16 @@
 2006-08-31 Joerg Wunsch <j@uriah.heep.sax.de>
 
+	The major part of this change has been contributed by
+	<andyw@pobox.com>.
+	Implements patch #4635: Add support for terminal/console
+	servers for serial programmers
+	* ser_posix.c: Add net_open(), and divert to it for net:host:port.
+	* ser_win32.c: Recognize net:host:port, and bail out.
+	* avrdude.1: Document the net:host:port connection option.
+	* doc/avrdude.texi: (Ditto.)
+
+2006-08-31 Joerg Wunsch <j@uriah.heep.sax.de>
+
 	Fix for bug #16627: Butterfly programmer does not reset after
 	programming
 	* butterfly.c: Wait for the device's response after sending
@@ -22,7 +33,7 @@
 	* serbb_win32.c: New pin numbering.
 	The generic and Posix-related parts of these changes have
 	been contributed by Hanns-Konrad Unger
-	
+
 2006-08-30 Joerg Wunsch <j@uriah.heep.sax.de>
 
 	Contributed by the anonymous developer of patch #5096:
